Modify gutter click